--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -516,7 +516,12 @@ svg {
 	margin-bottom: 20px;
 }
 
-.posts img {
+.post figure{
+	max-height: 100%;
+	height: 170px;
+}
+
+.posts figure img {
 	object-fit: cover;
 }
 .posts h3 {
